--- a/hw_2/html/style.css
+++ b/hw_2/html/style.css
@@ -17,9 +17,12 @@
 @font-face{
     font-family: Gilroy-Medium;
     src: url(./fonts/gilroy-medium.woff2);
-
 }
 
+@font-face{
+    font-family: Gilroy-Regular;
+    src:url(./fonts/gilroy-regular.woff2)
+}
 a {
     text-decoration: none;
 }
@@ -177,4 +180,154 @@ box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.20);
     padding-right: calc(50% - 600px);
 }
 
+.content-slogan{
+    padding-top: 100px;
+    padding-bottom: 100px;
+    display: grid;
+    grid-template-columns: repeat(3, 370px);
+    justify-content: center;
 
+}
+
+.content-slogan-item{
+    margin-left: 30px;
+    margin-right: 30px;
+    padding-top: 40px;
+    padding-left: 30px;
+    display: grid;
+    justify-content: center;
+    justify-items: start;
+    background: #FFF;
+
+box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06);
+}
+
+.slogan-item-pic{
+width: 70px;
+height: 70px;
+}
+
+.content-slogan-heading{
+    margin-top: 25px;
+    margin-bottom: 17px;
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.content-slogan-text{
+    margin-bottom: 25px;
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;  
+
+}
+
+.content-slogan-link{
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%
+
+}
+
+.content-main{
+    padding-top: 92px;
+    padding-bottom: 100px;
+
+}
+
+.h3-heading{
+    margin-bottom: 19px;
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    justify-content: center;
+}
+
+.content-main-text{
+    padding-left: calc(50% - 341px);
+    text-align: center;
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    width: 682px;
+}
+
+.content-main-items{
+    margin-top: 55px;
+    display: grid;
+    grid-template-columns: repeat(3, 370px);
+    justify-content: center;
+    gap: 30px;
+}
+
+.content-main-item{
+    display: grid;
+    justify-items: center;
+
+}
+
+.content-item-heading{
+    margin-bottom: 22px;
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.content-item-text{
+    width: 310px;
+    color: #AAA;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%
+}
+
+.content-item-button{
+    margin-top: 39px;
+    width: 150px;
+    height: 50px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    background: #F25822;
+    box-shadow: 4px 4px 8px 0px rgba(242, 88, 34, 0.20);
+    color: #FFF;
+
+    text-align: center;
+    font-family: Gilroy-Bold;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%
+
+
+}
+
+.item-button-icon{
+    border: 1.5px;
+    margin-left: 6px;
+    width: 4px;
+    height: 8px;
+    flex-shrink: 0;
+}
