--- a/hw_3/html/style.css
+++ b/hw_3/html/style.css
@@ -7,7 +7,7 @@ a {
     text-decoration: none;
 }
 
-body{
+body {
     font-family: 'Lato', sans-serif;
 }
 
@@ -17,7 +17,7 @@ body{
     max-width: 1600px;
     flex-shrink: 0;
     background-color: #222;
-    background-size:cover; 
+    background-size: cover;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -28,7 +28,7 @@ body{
     padding-right: calc(50% - 570px);
 }
 
-.header-logo-and-find{
+.header-logo-and-find {
     display: flex;
     align-items: center;
     gap: 42px;
@@ -41,17 +41,42 @@ body{
     flex-shrink: 0;
 }
 
+.header-menu {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    gap: 33px;
+
+}
+
+
 .header-link {
     background-color: #222;
 }
 
-.header-menu {
-display: flex;
-flex-wrap: nowrap;
-justify-content: space-between;
-gap: 33px;
+.header-menu-count-backgr {
+    width: 19px;
+    height: 19px;
+    flex-shrink: 0;
+    background-color: F16D7F;
+    margin-left: -42px;
+    margin-top: -7px;
 
 }
+
+.counter-text {
+    color: #FFF;
+    font-family: Lato;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-left: -45px;
+    margin-top: -7px;
+
+}
+
+
 
 .top-content {
     max-width: 100vw;
@@ -66,7 +91,7 @@ gap: 33px;
 .top-content-img {
     margin-left: -230px;
     justify-content: start;
-    
+
 }
 
 
@@ -80,7 +105,7 @@ gap: 33px;
     gap: 16px;
     margin-top: 290px;
     margin-bottom: 381px;
- 
+
 
 }
 
@@ -110,6 +135,7 @@ gap: 33px;
     font-weight: 700;
     line-height: normal;
 }
+
 .pink {
     color: #F16D7F;
     margin-left: 4px;
@@ -184,7 +210,7 @@ gap: 33px;
 }
 
 
-.item-text{
+.item-text {
     color: #5D5D5D;
     font-size: 14px;
     font-style: normal;
@@ -206,14 +232,11 @@ gap: 33px;
     grid-column: 1 / span 3;
     grid-row: 3 / span 3;
     justify-content: center;
-
-
-
 }
 
 
 .products-bottom-button {
-    border: 1px solid #FF6A6A ;
+    border: 1px solid #FF6A6A;
     width: 212px;
     height: 48px;
     flex-shrink: 0;
@@ -231,4 +254,103 @@ gap: 33px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+@media (max-width: 1024px) {
+    .center {
+        padding-left: calc(50% - 370px);
+        padding-right: calc(50% - 370px);
+    }
+
+    .logo {
+        margin-left: 16px;
+    }
+
+    .header-menu {
+        margin-right: 40px;
+    }
+
+    .header {
+        max-width: 100%;
+    }
+
+    .top-content {
+        height: 368px;
+    }
+
+    .top-content-img {
+        margin-left: 0;
+    }
+
+    .main-img {
+        width: 386px;
+        height: 368px;
+    }
+
+    .top-content-img-and-text {
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    .title {
+        font-size: 44px;
+    }
+
+    .subtitle {
+        font-size: 24px;
+    }
+
+    .categories {
+        grid-template-columns: repeat(3, 3fr);
+        gap: 20px;
+        margin-top: 65px;
+        margin-bottom: 110px;
+    }
+
+    .item-img {
+        max-width: 100%;
+        /* max-height: 100%; */
+    }
+
+    .item-big {
+        grid-column: 1 / 4;
+    }
+
+    .item-img-big {
+        max-width: 100%;
+    }
+
+    .products-title {
+        margin-bottom: 4px;
+    }
+
+    .products-content {
+        grid-template-columns: repeat(2, 360px);
+        grid-template-rows: auto;
+        padding-bottom: 70px;
+        gap: 16px;
+        grid-auto-flow: dense;
+        padding-bottom: 0;
+
+    }
+
+    .products-text {
+        margin-bottom: 74px;
+    }
+
+    .products-bottom {
+        margin-top: 32px;
+        padding-bottom: 70px;
+
+    }
+
+    .products-bottom {
+        /* grid-column: 1;
+        grid-row: end; */
+        justify-content: center;
+    }
+
+
+
+
 }
