--- a/the_brand/style.css
+++ b/the_brand/style.css
@@ -30,6 +30,28 @@ a {
   justify-content: space-between;
   padding-top: 25px;
 }
+.header__logo__text {
+  margin-right: 25px;
+  font-family: Lato;
+  font-size: 27px;
+  line-height: 32px;
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+  color: #222222;
+}
+.header__logo__text__pink__bold {
+  font-weight: 900;
+  color: #f16d7f;
+}
+.header__text {
+  font-family: Lato;
+  font-size: 14px;
+  line-height: 32px;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  color: #222222;
+}
 .header__left__div {
   display: flex;
   align-items: center;
@@ -61,7 +83,7 @@ a {
   position: absolute;
   top: 37px;
   width: 262px;
-  background-color: #ffffff;
+  background-color: #fff;
   border-radius: 5px;
 }
 .header__drop__down__categories___summary {
@@ -80,6 +102,11 @@ a {
   text-transform: uppercase;
   letter-spacing: 0.025em;
   color: #232323;
+  border-bottom: 1px solid #e8e8e8;
+  display: block;
+}
+.header__drop__down__categories__title:hover {
+  color: #f16d7f;
 }
 .header__drop__down__items {
   display: flex;
@@ -104,7 +131,7 @@ a {
   padding-left: 16px;
   width: 317px;
   height: 38px;
-  background-color: #ffffff;
+  background-color: #fff;
   border: 1px solid #e6e6e6;
   font-size: 14px;
   line-height: 32px;
@@ -116,7 +143,7 @@ a {
   margin-left: -1px;
   padding: 11px 12px;
   height: 38px;
-  background-color: #ffffff;
+  background-color: #fff;
   border: 1px solid #e6e6e6;
   border-radius: 0px 3px 3px 0px;
 }
@@ -129,147 +156,145 @@ a {
   gap: 26px;
   position: relative;
 }
-.header__right__div__cart__drop {
-  position: absolute;
-  top: 90px;
-  left: 4px;
+.header__right__div__cart {
+  width: 32px;
+  height: 29px;
+}
+.header__right__div__button__summary {
+  background-color: #f16d7f;
+  text-align: center;
+  width: 130px;
+  height: 38px;
+  box-sizing: border-box;
+  border: 1px solid #f16d7f;
+}
+.header__right__div__button__summary__cont {
   display: flex;
-  flex-direction: column;
   align-items: center;
+  gap: 8px;
+}
+.header__right__div__button__summary:hover {
+  background-color: #fff;
+  border: 1px solid #f16d7f;
+  transition: 0.3s;
+}
+.header__right__div__button__summary:hover .header__right__div__button__text {
+  color: #f16d7f;
+}
+.header__right__div__button__summary:hover .header__right__div__button__caret {
+  fill: #f16d7f;
+}
+.header__right__div__button__text {
+  margin-left: 18px;
+  font-size: 15px;
+  line-height: 32px;
+  font-weight: 400;
+  letter-spacing: 0.025em;
+  color: #fff;
+}
+.header__right__div__button__caret {
+  fill: #fff;
+}
+.header__right__cart {
+  display: flex;
+  padding-bottom: 9px;
+  flex-direction: column;
   justify-items: center;
+  width: 100%;
   background-color: #ffffff;
   border-radius: 5px;
+  border: 1px solid #ffffff;
+  position: absolute;
+  right: 14px;
+  left: auto;
+  top: 55px;
 }
-.header__right__div__cart__drop__product {
+.header__right__cart__item {
+  margin-top: 21px;
   padding-bottom: 16px;
-  margin-top: 16px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  align-items: center;
-  justify-items: center;
-}
-.header__right__div__cart__drop__product__item {
-  margin-right: 8px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 10px;
-}
-.header__right__div__cart__drop__total {
-  margin-top: 19px;
-  margin-bottom: 32px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-.header__right__div__cart__drop__total__price {
+  box-sizing: border-box;
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-around;
+  border-bottom: 1px solid rgba(237, 237, 237, 0.74);
 }
-.header__right__div__checkout {
-  margin-bottom: 11px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 225px;
-  height: 50px;
-  border: 1px solid #f16d7f;
-  font-size: 14px;
+.header__right__cart__item-info {
+  display: block;
+}
+.header__right__cart__title {
+  font-family: Lato;
+  font-size: 12px;
   line-height: 1.2;
   font-weight: 700;
   text-transform: uppercase;
+  color: #222222;
+}
+.header__right__cart__text {
+  font-family: Lato;
+  font-size: 12px;
+  line-height: 1.2;
+  font-weight: 400;
+  text-transform: uppercase;
   color: #f16d7f;
 }
-.header__right__div__go__to__cart {
+.header__right__cart__text-x {
+  font-family: Lato;
+  font-size: 10px;
+  line-height: 1.2;
+  font-weight: 400;
+  text-transform: uppercase;
+  color: #f16d7f;
+}
+.header__right__cart__fa-circle {
+  fill: #c0c0c0;
+}
+.header__right__cart__total {
+  margin-top: 20px;
+  margin-bottom: 32px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  align-content: center;
+  justify-content: space-around;
+}
+.header__right__cart__total-heading {
+  font-family: Lato;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #222222;
+}
+.header__right__cart__total-price {
+  font-family: Lato;
+  font-size: 16px;
+  line-height: 1.2;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #222222;
+}
+.header__right__cart__button-link {
+  display: block;
+  margin-left: 18px;
+  margin-bottom: 11px;
   width: 225px;
   height: 50px;
-  background-color: #ffffff;
   border: 1px solid #eaeaea;
+  text-align: center;
+}
+.header__right__cart__button-link:hover {
+  border: 1px solid #f16d7f;
+  transition: 0.3s;
+}
+.header__right__cart__button-link:hover .header__right__cart__button-text {
+  color: #f16d7f;
+  transition: 0.3s;
+}
+.header__right__cart__button-text {
+  margin-top: 18px;
+  font-family: Lato;
   font-size: 14px;
   line-height: 1.2;
   font-weight: 700;
   text-transform: uppercase;
   color: #4a4a4a;
-}
-.header__right__div__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
-  width: 130px;
-  height: 38px;
-  background-color: #f16d7f;
-}
-.header__right__div__button__text {
-  font-size: 15px;
-  line-height: 32px;
-  font-weight: 400;
-  letter-spacing: 0.025em;
-  color: #ffffff;
-}
-.header #cart {
-  position: absolute;
-  left: -99999px;
-}
-.header #cart:checked ~ .header__right__div__cart__drop {
-  display: none;
-}
-.header .logo__text {
-  font-size: 27px;
-  line-height: 32px;
-  font-weight: 300;
-  text-transform: uppercase;
-  letter-spacing: 0.025em;
-  color: #222222;
-}
-.header .logo__text__pink__bold {
-  font-weight: 900;
-  color: #f16d7f;
-}
-.header .text {
-  font-size: 14px;
-  line-height: 32px;
-  font-weight: 300;
-  letter-spacing: 0.025em;
-  color: #222222;
-}
-.header .text__product__mini {
-  font-size: 12px;
-  line-height: 1.2;
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #222222;
-}
-.header .text__product__mini__price {
-  font-size: 12px;
-  line-height: 1.2;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: #f16d7f;
-}
-.header .text__product__mini__price__X {
-  font-size: 10px;
-}
-.header .svg__caret__down {
-  fill: #a4a4a4;
-}
-.header .svg__caret__down__white {
-  fill: #ffffff;
-}
-.header .line__separator {
-  border-bottom: 1px solid #e8e8e8;
-  width: 236px;
-}
-.header .line__separator__right__drop {
-  width: 229px;
-  height: 1px;
-  background-color: rgba(237, 237, 237, 0.74);
-}
-.header .svg__search__path {
-  fill: #a4a4a4;
 }/*# sourceMappingURL=style.css.map */
